Fixed z-index for sidebar

--- a/index.css
+++ b/index.css
@@ -13,7 +13,7 @@ body{
   height: 100%; /* Full-height: remove this if you want "auto" height */
   width: 7%; /* Set the width of the sidebar */
   position: fixed; /* Fixed Sidebar (stay in place on scroll) */
-  z-index: 1; /* Stay on top */
+  z-index: 4; /* Stay on top */
   top: 0; /* Stay at the top */
   background-color: #111; /* Black */
   overflow-x: hidden; /* Disable horizontal scroll */
